--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -38,7 +38,7 @@
                 <a href="#projects" class="btn">View My Work</a>
             </div>
             <div class="hero-image">
-                <img src="src/developer.png" alt="Profile Image">
+                <img src="developer.png" alt="Profile Image">
             </div>
         </div>
     </section>
@@ -58,7 +58,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <img src="src/profil - Copy.jpg" alt="About Image">
+                    <img src="profil - Copy.jpg" alt="About Image">
                 </div>
             </div>
         </div>
@@ -109,7 +109,7 @@
             <h2 class="section-title">My Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="src/fanny.png" alt="Project 1">
+                    <img src="fanny.png" alt="Project 1">
                     <div class="project-info">
                         <h3>Fanny's Store E-Commerce Website</h3>
                         <p>Fanny’s Store is a cosmetics e-commerce website that allows customers to browse, search, and purchase beauty products online. The platform includes a user-friendly front-end for shoppers and a back-end admin dashboard for managing products, categories, and transactions.</p>
@@ -119,7 +119,7 @@
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="src/mascotkyou 2.png" alt="Project 2">
+                    <img src="mascotkyou 2.png" alt="Project 2">
                     <div class="project-info">
                         <h3>Kyou.id Mobile Application</h3>
                         <p>Kyou.id Mobile Application is a UI/UX design project aimed at adapting the existing Kyou.id website into a mobile-friendly experience. The goal was to retain the brand’s visual identity while optimizing usability, navigation, and layout for smaller screens.</p>
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <div class="project-card" href="#">
-                    <img src="src/segar.png" alt="Project 3">
+                    <img src="segar.png" alt="Project 3">
                     <div class="project-info">
                         <h3>Segar</h3>
                         <p>Segar is android application for vegetable freshness detection. This application is from capstone project at Bangkit Academy led by Google, Tokopedia, Gojek, & Traveloka aimed at helping users determine the freshness of vegetables through image scanning.</p>
