--- a/index.html
+++ b/index.html
@@ -153,22 +153,21 @@
                     <p><i class="fas fa-phone"></i> (+65) 82060889</p>
                     <p><i class="fas fa-map-marker-alt"></i> Singapore</p>
                 </div>
-                <!-- modify this form HTML and place wherever you want your form -->
-<form
-  action="https://formspree.io/f/xpwrkbqn"
-  method="POST"
->
-  <label>
-    Your email:
-    <input type="email" name="email">
-  </label>
-  <label>
-    Your message:
-    <textarea name="message"></textarea>
-  </label>
-  <!-- your other form fields go here -->
-  <button type="submit">Send</button>
-</form>
+                <form class="contact-form" action="https://formspree.io/f/xpwrkbqn" method="POST">
+                    <div class="form-group">
+                        <input type="text" name="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" name="_replyto" placeholder="Your Email" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="_subject" placeholder="Subject">
+                    </div>
+                    <div class="form-group">
+                        <textarea name="message" placeholder="Your Message" required></textarea>
+                    </div>
+                    <button type="submit" class="btn">Send Message</button>
+                </form>
             </div>
         </div>
     </section>
