--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
                         <input type="text" name="name" placeholder="Your Name" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" name="_replyto" placeholder="Your Email" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
                     </div>
                     <div class="form-group">
-                        <input type="text" name="_subject" placeholder="Subject">
+                        <input type="text" name="subject" placeholder="Subject">
                     </div>
                     <div class="form-group">
                         <textarea name="message" placeholder="Your Message" required></textarea>
