--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
                     <p><i class="fas fa-map-marker-alt"></i> Singapore</p>
                 </div>
                 <form class="contact-form" action="https://formspree.io/f/xpwrkbqn" method="POST">
-                    <div class="form-group">
+                    <label class="form-group">
                         <input type="email" name="email" placeholder="Your Email" required>
-                    </div>
-                    <div class="form-group">
+                    </label>
+                    <label class="form-group">
                         <textarea name="message" placeholder="Your Message" required></textarea>
-                    </div>
+                    </label>
                     <button type="submit" class="btn">Send Message</button>
                 </form>
             </div>
