--- a/index.html
+++ b/index.html
@@ -154,12 +154,18 @@
                     <p><i class="fas fa-map-marker-alt"></i> Singapore</p>
                 </div>
                 <form class="contact-form" action="https://formspree.io/f/xpwrkbqn" method="POST">
-                    <label class="form-group">
+                    <div class="form-group">
+                        <input type="text" name="name" placeholder="Your Name" required>
+                    </div>
+                    <div class="form-group">
                         <input type="email" name="email" placeholder="Your Email" required>
-                    </label>
-                    <label class="form-group">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="subject" placeholder="Subject">
+                    </div>
+                    <div class="form-group">
                         <textarea name="message" placeholder="Your Message" required></textarea>
-                    </label>
+                    </div>
                     <button type="submit" class="btn">Send Message</button>
                 </form>
             </div>
