--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <p><i class="fas fa-phone"></i> (+65) 82060889</p>
                     <p><i class="fas fa-map-marker-alt"></i> Singapore</p>
                 </div>
-                <form class="contact-form" action="https://formspree.io/f/xpwrkbqn" method="POST">
+                <form class="contact-form" action="https://formspree.io/f/xpwrkbqn" method="POST" enctype="multipart/form-data">
                     <div class="form-group">
                         <input  id="name" type="name" name="name" placeholder="Your Name" required>
                     </div>
