--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
                     <div class="form-group">
                         <textarea  id="message" name="message" placeholder="Your Message" required></textarea>
                     </div>
+                    <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html#form-success">
+                    <input type="hidden" name="_autoresponse" value="Thank you for your message!">
                     <button type="submit" class="btn">Send Message</button>
                 </form>
             </div>
